Align right-details stuff by setting fixed width and center align on icons

--- a/sass/_event.scss
+++ b/sass/_event.scss
@@ -61,7 +61,13 @@
         .right-info {
             display: block;
             float: left;
-        }
+            
+            i.fa {
+                width: 15px;
+                text-align: center;
+            }
+            
+        } // .right-info
         
         .event-title {
             margin-bottom: 2px;    
